   * Changed the Id of the Halberdier from "Halbardier" to "Halberdier"
   * New name for the "Soul Shooter": "Banebow"
   * multiplayer lobby: highlight the names of the players which have joined
     the selected game (bug #7471)
   * multiplayer lobby: tab completion works for all player names now,
     not only for those which are not in a game (bug #9350)
   * enable "teamchat" for observers
 * graphics
   * fixed a glitch with the undo of recruit or recall on high places.
   * Improve rendering of "black stripes": don't hide footsteps or fog,
     and apply it also on off-map tiles when active.
   * Improve rendering of grid: draw under fog, shroud and "black stripes"
   * Fixed bug #9646: ToD changes not applied to mainmap in replay mode.
   * Remove ToD coloring and brightening of off-map background tiles
   * fix inconsistant highlighting of fog transitions
   * slightly bigger and multi-hex attack direction indicator, fixed
     incorrect scale update when zooming.
   * improve footsteps : better beginning, angles and end, reduce
     cpu cost, fix incorrect left-right sequences and clean some images
   * fixed the glitch which would occur on some maps in the top right
     corner and bottom left corner, these tiles were rendered as void
     instead of a normal terrain.
 * sounds and music
   * new or improved sounds: bat hit
 * map editor:
   * the grid is scaled properly again and no longer shown in the offmap area
   * the resize option can now also use the surrounding tiles to expand the
     map in a smart way, this is the default.
   * the map editor can now also shift the origin of the map when resizing.
   * tiles can now have their own image in the editor, defaults to the minimap
     image. Also added some placeholder art.
 * user interface:
   * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
   * Add an additional line below the minimap in the "Multiplayer->Create game"